{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 79,
  "lineage": "27e84576-3e23-f855-ffba-4f085c96d037",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f13cfb9e8df42c1",
            "domain": "vpc",
            "id": "eipalloc-03f13cfb9e8df42c1",
            "network_border_group": "us-east-2",
            "private_dns": "ip-10-0-0-89.us-east-2.compute.internal",
            "public_dns": "ec2-18-221-7-117.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.7.117",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pcfb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047895906137:internet-gateway/igw-0fa61bd41f5682b6a",
            "id": "igw-0fa61bd41f5682b6a",
            "owner_id": "047895906137",
            "tags": {
              "Name": "pcfb-igw"
            },
            "tags_all": {
              "Name": "pcfb-igw"
            },
            "vpc_id": "vpc-04384e2295dba722c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f13cfb9e8df42c1",
            "association_id": "eipassoc-0ae9a73f697ea45ce",
            "connectivity_type": "public",
            "id": "nat-0d1f584c712870053",
            "network_interface_id": "eni-01287784b721be833",
            "private_ip": "10.0.0.20",
            "public_ip": "18.221.7.117",
            "subnet_id": "subnet-0f2614f50b915ab3a",
            "tags": {
              "Name": "pcfb-nat-gateway"
            },
            "tags_all": {
              "Name": "pcfb-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047895906137:route-table/rtb-05fd91f5c6d39a7a5",
            "id": "rtb-05fd91f5c6d39a7a5",
            "owner_id": "047895906137",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1f584c712870053",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pcfb-private-rt"
            },
            "tags_all": {
              "Name": "pcfb-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04384e2295dba722c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047895906137:route-table/rtb-005c40f8448da73ed",
            "id": "rtb-005c40f8448da73ed",
            "owner_id": "047895906137",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa61bd41f5682b6a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pcfb-public-rt"
            },
            "tags_all": {
              "Name": "pcfb-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04384e2295dba722c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pcfb_igw",
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c5237c378ba290f",
            "route_table_id": "rtb-05fd91f5c6d39a7a5",
            "subnet_id": "subnet-0b9c985a6104d742d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet",
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b853005075c0e83",
            "route_table_id": "rtb-05fd91f5c6d39a7a5",
            "subnet_id": "subnet-0496a04ead8a83603"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet",
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0165c9b2482f3783e",
            "route_table_id": "rtb-005c40f8448da73ed",
            "subnet_id": "subnet-0f2614f50b915ab3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pcfb_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047895906137:subnet/subnet-0b9c985a6104d742d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9c985a6104d742d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047895906137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pcfb-private-subnet-a"
            },
            "tags_all": {
              "Name": "pcfb-private-subnet-a"
            },
            "vpc_id": "vpc-04384e2295dba722c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047895906137:subnet/subnet-0496a04ead8a83603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0496a04ead8a83603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047895906137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pcfb-private-subnet-b"
            },
            "tags_all": {
              "Name": "pcfb-private-subnet-b"
            },
            "vpc_id": "vpc-04384e2295dba722c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047895906137:subnet/subnet-0f2614f50b915ab3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2614f50b915ab3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047895906137",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pcfb-public-subnet"
            },
            "tags_all": {
              "Name": "pcfb-public-subnet"
            },
            "vpc_id": "vpc-04384e2295dba722c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pcfb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pcfb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:047895906137:vpc/vpc-04384e2295dba722c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0ec2517350ac40797",
            "default_route_table_id": "rtb-08f335702ac5aca48",
            "default_security_group_id": "sg-0b263f3360a37ba51",
            "dhcp_options_id": "dopt-b915b9d2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04384e2295dba722c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f335702ac5aca48",
            "owner_id": "047895906137",
            "tags": {
              "Name": "pcfb-vpc"
            },
            "tags_all": {
              "Name": "pcfb-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}